# Agent-Memory-Manager

./: .gitignore  AGENTS.md  README.md  final_summary.csv  pyproject.toml  requirements.txt  results_cache_pressure_compare.csv
agent/: __init__.py  artifact_store.py  context_compiler.py  memory_object.py  policies.py
agentmem/: README.md  __init__.py  __main__.py  benchmark.py  cli.py  evaluation.py
benchmarks/: __init__.py  run_ablation.py  run_context_compiler_benchmark.py  scenarios.py
configs/: config.yaml
docs/: agent_memory_compiler_design.md  benchmark.md  deployment.md  design.md  llm_infra_agent_interview_prep.md  openeuler_container.md  openeuler_deployment.md
experiments/: toy_vllm_scheduler.py
results/: ablation.csv  branching_baseline.csv  branching_optimized.csv  long_session_baseline.csv  long_session_summary_memory.csv  multi_stage_event_sourced_memory.csv  multi_stage_full_history.csv  prefix_cache_baseline.csv  report.md  summary.csv  tool_heavy_baseline.csv  tool_heavy_optimized.csv
results_agent_meta_off/: cache_stats_tool_heavy_baseline_before.json  cache_stats_tool_heavy_optimized_after.json  cache_stats_tool_heavy_optimized_before.json  tool_heavy_baseline.csv  tool_heavy_optimized.csv  vllm_benchmark.csv
results_agent_meta_on/: cache_stats_tool_heavy_baseline_after.json  report.md  tool_heavy_optimized.csv  vllm_benchmark.csv
results_branching_final/: branch_benchmark.csv  summary.csv
results_cache_pressure_off/: cache_stats_cache_pressure_sessions_4_after.json  report.md
results_cache_pressure_off_final/: report.md
(+267 files in other folders)
