[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmem"
version = "0.1.0"
description = "KV-friendly Agent context and tool result memory MVP"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0.0",
  "PyYAML>=6.0.0",
]

[project.scripts]
agentmem = "agentmem.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
